Stop fixed navigation covering content on scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,10 @@ h4 {
     font-weight: 300;
 }
 
+[id] {
+    scroll-margin-top: 5em;
+}
+
 .underline-decorator {
     width: fit-content;
     position: relative;
